# 0.1.0

update yaxpeax-arch to 0.2.3, fix some API differences

# 0.0.4

first version with changelog, decoder is complete but untested